Source/WebCore/editing/TextIteratorBehavior.h
@@ -54,6 +54,10 @@ enum TextIteratorBehaviorFlag {
     TextIteratorEmitsImageAltText = 1 << 6,
 
     TextIteratorBehavesAsIfNodesFollowing = 1 << 7,
+
+    // Makes visiblity test take into account the visibility of the frame.
+    // FIXME: This should probably be always on unless TextIteratorIgnoresStyleVisibility is set.
+    TextIteratorClipsToFrameAncestors = 1 << 8,
 };
 
 typedef unsigned short TextIteratorBehavior;
